--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,19 @@
     }
 
     .stats-container {
-        @apply bg-[#091F1C] p-5 rounded-lg border-[#004337] border
+        @apply bg-[#091F1C] p-5 rounded-lg border-[#004337] border flex-1 max-w-2xl
+    }
+
+    .countdown {
+        @apply p-8 text-5xl text-center text-white rounded-lg lg:min-w-[150px] bg-[#013F34]
+
+    }
+
+    .countdown-label {
+        @apply text-center text-white uppercase text-sm pt-4
+    }
+
+    .admin-button {
+        @apply bg-[#091F1C] p-2 flex-1 rounded-md border-[#004337] border-2 hover:bg-emerald-500/50
     }
 }
